# smhesly

./: Cargo.toml  LICENSE.txt  README.md  build.rs
alfred/: Smhesly.alfredworkflow
src/: main.rs  messagecore_grpc.rs
src/protos/: messagecore.rs  messagecore_grpc.rs  mod.rs
