[package]
name = "smhesly"
version = "0.1.0"
authors = ["Jørund B. Fagerjord <j.b.fagerjord@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/protos/mod.rs"

[dependencies]
futures = "0.1.16"
grpcio = "0.5.1"
protobuf = "~2"
clap = "~2.33"

[build-dependencies]
protoc-grpcio = "1.1.0"
